hphp/test/slow/ext_array/range-mem-limit.php.expectf

Fatal error: request has exceeded memory limit %d of %d used in %s on line 8
